week07-3:review 도메인 tsoa, api 응답 통일, 에러 핸들링 설정
